fix App - add getRoot & setRoot

--- a/composer.json
+++ b/composer.json
@@ -22,8 +22,7 @@
         }
     ],
     "require": {
-        "vlucas/phpdotenv": "^5.4",
-        "symfony/console": "^6.0"
+        "vlucas/phpdotenv": "^5.4"
     },
     "autoload-dev": {
         "psr-4": {
